--- a/Source/AchievementsTest/AchievementsConfig.INI
+++ b/Source/AchievementsTest/AchievementsConfig.INI
@@ -1,42 +1,39 @@
-[TimeAchievementsList]
+[AchievementsList]
 noDamage5min = 1
 noDamage10min = 2
 noDamage15min = 3
+destroy5BigAsteroids = 4
+destroy10BigAsteroids = 5
+destroy5LittleAsteroids = 6
 
-[TimeAchievementsList.noDamage5min]
+[AchievementsList.noDamage5min]
 _idAchievement = 1 
 _progressState = 0
-_progressFinishState = 1
+_progressFinishState = 5
 _displayName = No Damage 5 min
 _displayDescriptionName = No Damage 5 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[TimeAchievementsList.noDamage10min]
+[AchievementsList.noDamage10min]
 _idAchievement = 2 
 _progressState = 0
-_progressFinishState = 2
+_progressFinishState = 10
 _displayName = No Damage 10 min
 _displayDescriptionName = No Damage 10 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[TimeAchievementsList.noDamage15min]
+[AchievementsList.noDamage15min]
 _idAchievement = 3 
 _progressState = 0
-_progressFinishState = 3
+_progressFinishState = 15
 _displayName = No Damage 15 min
 _displayDescriptionName = No Damage 15 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[DestroyAchievementsList]
-destroy5BigAsteroids = 4
-destroy10BigAsteroids = 5
-destroy5MiddleAsteroids = 6
-destroy10MiddleAsteroids = 7
-
-[DestroyAchievementsList.destroy5BigAsteroids]
+[AchievementsList.destroy5BigAsteroids]
 _idAchievement = 4 
 _progressState = 0
 _progressFinishState = 5
@@ -45,7 +42,7 @@ _displayDescriptionName = Destroyed 5 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[DestroyAchievementsList.destroy10BigAsteroids]
+[AchievementsList.destroy10BigAsteroids]
 _idAchievement = 5 
 _progressState = 0
 _progressFinishState = 10
@@ -54,7 +51,7 @@ _displayDescriptionName = Destroyed 10 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[DestroyAchievementsList.destroy5MiddleAsteroids]
+[AchievementsList.destroy5LittleAsteroids]
 _idAchievement = 6 
 _progressState = 0
 _progressFinishState = 5
