Different types of ammuniton

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -11,7 +11,12 @@ smallasteroid =  Resources\graphics\smallasteroid.png
 bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
+bulletSmall = Resources\graphics\bulletSmall.png
+bulletMedium = Resources\graphics\bulletMedium.png
 bulletBig = Resources\graphics\bulletBig.png
+rocketSmall = Resources\graphics\rocketSmall.png
+rocketMedium = Resources\graphics\rocketMedium.png
+rocketBig = Resources\graphics\rocketBig.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
