--- a/Source/UI/UI.vcxproj
+++ b/Source/UI/UI.vcxproj
@@ -141,6 +141,7 @@ xcopy "$(SolutionDir)SFML\bin\sfml-window-2.dll" "$(OutDir)\*.*" /F /R /Y /I</Co
   <ItemGroup>
     <ClCompile Include="AchievementShower.cpp" />
     <ClCompile Include="Label.cpp" />
+    <ClCompile Include="Picture.cpp" />
     <ClCompile Include="ScrollBar.cpp" />
     <ClCompile Include="SfmlButton.cpp" />
     <ClCompile Include="UI.cpp" />
@@ -149,6 +150,7 @@ xcopy "$(SolutionDir)SFML\bin\sfml-window-2.dll" "$(OutDir)\*.*" /F /R /Y /I</Co
   <ItemGroup>
     <ClInclude Include="AchievementShower.h" />
     <ClInclude Include="Label.h" />
+    <ClInclude Include="Picture.h" />
     <ClInclude Include="ScrollBar.h" />
     <ClInclude Include="SfmlButton.h" />
     <ClInclude Include="UI.h" />
