--- a/Source/UI/UI.vcxproj.filters
+++ b/Source/UI/UI.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="AchievementShower.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Picture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="UI.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="AchievementShower.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Picture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
