--- a/Source/AchievementsTest/AchievementsConfig.INI
+++ b/Source/AchievementsTest/AchievementsConfig.INI
@@ -1,39 +1,42 @@
-[AchievementsList]
+[TimeAchievementsList]
 noDamage5min = 1
 noDamage10min = 2
 noDamage15min = 3
-destroy5BigAsteroids = 4
-destroy10BigAsteroids = 5
-destroy5LittleAsteroids = 6
 
-[AchievementsList.noDamage5min]
+[TimeAchievementsList.noDamage5min]
 _idAchievement = 1 
 _progressState = 0
-_progressFinishState = 5
+_progressFinishState = 1
 _displayName = No Damage 5 min
 _displayDescriptionName = No Damage 5 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[AchievementsList.noDamage10min]
+[TimeAchievementsList.noDamage10min]
 _idAchievement = 2 
 _progressState = 0
-_progressFinishState = 10
+_progressFinishState = 2
 _displayName = No Damage 10 min
 _displayDescriptionName = No Damage 10 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[AchievementsList.noDamage15min]
+[TimeAchievementsList.noDamage15min]
 _idAchievement = 3 
 _progressState = 0
-_progressFinishState = 15
+_progressFinishState = 3
 _displayName = No Damage 15 min
 _displayDescriptionName = No Damage 15 min!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[AchievementsList.destroy5BigAsteroids]
+[DestroyAchievementsList]
+destroy5BigAsteroids = 4
+destroy10BigAsteroids = 5
+destroy5MiddleAsteroids = 6
+destroy10MiddleAsteroids = 7
+
+[DestroyAchievementsList.destroy5BigAsteroids]
 _idAchievement = 4 
 _progressState = 0
 _progressFinishState = 5
@@ -42,7 +45,7 @@ _displayDescriptionName = Destroyed 5 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[AchievementsList.destroy10BigAsteroids]
+[DestroyAchievementsList.destroy10BigAsteroids]
 _idAchievement = 5 
 _progressState = 0
 _progressFinishState = 10
@@ -51,12 +54,12 @@ _displayDescriptionName = Destroyed 10 Big Asteroids!!!
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
-[AchievementsList.destroy5LittleAsteroids]
+[DestroyAchievementsList.destroy5MiddleAsteroids]
 _idAchievement = 6 
 _progressState = 0
 _progressFinishState = 5
-_displayName = Destroy 5 Middle Asteroids
-_displayDescriptionName = Destroyed 5 Middle Asteroids!!!
+_displayName = Killer
+_displayDescriptionName = Destroyed 5 Middle Asteroids
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
@@ -64,8 +67,8 @@ _dateCompleteAchievements = 0
 _idAchievement = 7 
 _progressState = 0
 _progressFinishState = 10
-_displayName = Destroy 10 Middle Asteroids
-_displayDescriptionName = Destroyed 10 Middle Asteroids!!!
+_displayName = Super Killer
+_displayDescriptionName = Destroyed 10 Middle Asteroids
 _achievedActive = 0
 _dateCompleteAchievements = 0
 
