add UI HP and Lifes

--- a/Source/Spaceship/Spaceship.vcxproj
+++ b/Source/Spaceship/Spaceship.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="Rocket.h" />
     <ClInclude Include="Spaceship.h" />
     <ClInclude Include="SpaceshipRespawnEvent.h" />
+    <ClInclude Include="UpdateSpaceshipStateEvent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BulletManager.cpp" />
