--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -6,17 +6,10 @@ booom =  Resources\audio\booom.wav
 asteroid =  Resources\graphics\aster.bmp
 smallasteroid =  Resources\graphics\smallasteroid.png
 
-
 [TextureResource]
 bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
-bulletSmall = Resources\graphics\bulletSmall.png
-bulletMedium = Resources\graphics\bulletMedium.png
-bulletBig = Resources\graphics\bulletBig.png
-rocketSmall = Resources\graphics\rocketSmall.png
-rocketMedium = Resources\graphics\rocketMedium.png
-rocketBig = Resources\graphics\rocketBig.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
@@ -24,6 +17,24 @@ cat =  Resources\graphics\cat.png
 fire =  Resources\graphics\fire.png
 spaceship = Resources\graphics\spaceship.png
 spaceshipFlickering = Resources\graphics\spaceshipFlickering.png
+bulletSmallFlickering = Resources\graphics\bulletSmallFlickering.png
+bulletSmall = Resources\graphics\bulletSmall.png
+bulletMediumFlickering = Resources\graphics\bulletMediumFlickering.png
+bulletMedium = Resources\graphics\bulletMedium.png
+bulletBigFlickering = Resources\graphics\bulletBigFlickering.png
+bulletBig = Resources\graphics\bulletBig.png
+rocketSmallFlickering = Resources\graphics\rocketSmallFlickering.png
+rocketSmall = Resources\graphics\rocketSmall.png
+rocketMediumFlickering = Resources\graphics\rocketMediumFlickering.png
+rocketMedium = Resources\graphics\rocketMedium.png
+rocketBigFlickering = Resources\graphics\rocketBigFlickering.png
+rocketBig = Resources\graphics\rocketBig.png
+firstAidFlickering =  Resources\graphics\firstAidFlickering.png
+firstAid =  Resources\graphics\firstAid.png
+secondAidFlickering = Resources\graphics\secondAidFlickering.png
+secondAid = Resources\graphics\secondAid.png
+thirdAidFlickering = Resources\graphics\thirdAidFlickering.png
+thirdAid =  Resources\graphics\thirdAid.png
 
 [ImageSequenceResource.girl]
 Width =  110
@@ -44,7 +55,6 @@ Height =  192
 FrameCount =  12
 AnimationTime =  600
 
-
 [ImageSequenceResource.spaceship]
 Width =  99
 Height =  122
@@ -57,6 +67,102 @@ Height =  122
 FrameCount =  8
 AnimationTime =  1000
 
+[ImageSequenceResource.bulletBigFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+
+[ImageSequenceResource.bulletBig]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+
+[ImageSequenceResource.bulletMediumFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+
+[ImageSequenceResource.bulletMedium]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+
+[ImageSequenceResource.bulletSmallFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+
+[ImageSequenceResource.bulletSmall]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+
+[ImageSequenceResource.rocketBigFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+[ImageSequenceResource.rocketBig]
+Width =  84 
+Height =  84
+FrameCount =  1
+AnimationTime =  400     
+[ImageSequenceResource.rocketMediumFlickering]
+Width =  84 
+Height =  84
+FrameCount =  2 
+AnimationTime =  400
+[ImageSequenceResource.rocketMedium]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+[ImageSequenceResource.rocketSmallFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+[ImageSequenceResource.rocketSmall]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+[ImageSequenceResource.firstAidFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400   
+[ImageSequenceResource.firstAid]
+Width =  84
+Height =  84
+FrameCount = 1
+AnimationTime =  400
+[ImageSequenceResource.secondAidFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400   
+[ImageSequenceResource.secondAid]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
+[ImageSequenceResource.thirdAidFlickering]
+Width =  84
+Height =  84
+FrameCount =  2
+AnimationTime =  400
+[ImageSequenceResource.thirdAid]
+Width =  84
+Height =  84
+FrameCount =  1
+AnimationTime =  400
 [Input]
 0 = 73, 22
 1 = 74, 18
