Rewrite achievements manager. add time achievs. now achievs deleted correctly. bugs fix.

--- a/Source/AchievementsTest/AchievementsConfig.INI
+++ b/Source/AchievementsTest/AchievementsConfig.INI
@@ -6,7 +6,7 @@ noDamage15min = 3
 [TimeAchievementsList.noDamage5min]
 _idAchievement = 1 
 _progressState = 0
-_progressFinishState = 1
+_progressFinishState = 5.0f 
 _displayName = No Damage 5 min
 _displayDescriptionName = No Damage 5 min!!!
 _achievedActive = 0
@@ -15,7 +15,7 @@ _dateCompleteAchievements = 0
 [TimeAchievementsList.noDamage10min]
 _idAchievement = 2 
 _progressState = 0
-_progressFinishState = 2
+_progressFinishState = 10.0f
 _displayName = No Damage 10 min
 _displayDescriptionName = No Damage 10 min!!!
 _achievedActive = 0
@@ -24,7 +24,7 @@ _dateCompleteAchievements = 0
 [TimeAchievementsList.noDamage15min]
 _idAchievement = 3 
 _progressState = 0
-_progressFinishState = 3
+_progressFinishState = 15.0f
 _displayName = No Damage 15 min
 _displayDescriptionName = No Damage 15 min!!!
 _achievedActive = 0
@@ -102,4 +102,4 @@ _progressFinishState = 15
 _displayName = destroy 15 Small Asteroids In 30 Seconds
 _displayDescriptionName = Destroyed 15 Small Asteroids In 30 Seconds!!!
 _achievedActive = 0
-_dateCompleteAchievements = 0
+_dateCompleteAchievements = 0 
