Icons of lives are displayed correctly

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -35,6 +35,7 @@ secondAidFlickering = Resources\graphics\secondAidFlickering.png
 secondAid = Resources\graphics\secondAid.png
 thirdAidFlickering = Resources\graphics\thirdAidFlickering.png
 thirdAid =  Resources\graphics\thirdAid.png
+gameOver =  Resources\graphics\gameOver.png
 
 [ImageSequenceResource.girl]
 Width =  110
@@ -163,6 +164,11 @@ Width =  84
 Height =  84
 FrameCount =  1
 AnimationTime =  400
+[ImageSequenceResource.gameOver]
+Width =  1000
+Height =  118
+FrameCount =  2
+AnimationTime =  600
 [Input]
 0 = 73, 22
 1 = 74, 18
