--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -1,10 +1,11 @@
 [AudioResource]
-piupiu =  Resources\audio\piupiu.wav
-booom =  Resources\audio\booom.wav
-shoot =  Resources\audio\shoot.wav
-rocket =  Resources\audio\shoot2.wav
-collision = Resources\audio\crash.wav
-crash = Resources\audio\collision.wav
+piupiuSound =  Resources\audio\piupiu.wav
+booomSound =  Resources\audio\booom.wav
+shootSound =  Resources\audio\shoot.wav
+rocketSound =  Resources\audio\shoot2.wav
+collisionSound = Resources\audio\crash.wav
+crashSound = Resources\audio\collision.wav
+achievementSound = Resources\audio\achievement.wav
 
 [PictureResource]
 asteroid =  Resources\graphics\aster.bmp
