skeleton for GameOver

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -10,6 +10,7 @@ smallasteroid =  Resources\graphics\smallasteroid.png
 bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
+resetButton = Resources\graphics\resetButton.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
