--- a/Source/LeaderboardTest/LeaderboardTest.vcxproj
+++ b/Source/LeaderboardTest/LeaderboardTest.vcxproj
@@ -73,6 +73,7 @@
     <LinkIncremental>true</LinkIncremental>
     <OutDir>$(SolutionDir)Bin\</OutDir>
     <IntDir>$(SolutionDir)Temp\$(ProjectName)\$(Configuration)\</IntDir>
+    <TargetName>$(ProjectName)_d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Test|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -118,7 +119,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(SolutionDir)TEMP;$(SolutionDir)PlayFab\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>cpprest140_2_9.lib;PlayFabSdk2015_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>cpprest140d_2_9.lib;PlayFabSdk2015_d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)PlayFab\bin\cpprest140_2_9.dll" "$(OutDir)\*.*" /F /R /Y /I</Command>
