add images for buttons

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -16,6 +16,8 @@ bullet = Resources\graphics\bullet.png
 rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
 resetButton = Resources\graphics\resetButton.png
+exitButton = Resources\graphics\exitButton.png
+pauseButton = Resources\graphics\pauseButton.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
@@ -185,7 +187,7 @@ AnimationTime =  8000
 6 = 57
 7 = 39
 8 = 54
-9 = 100
+9 = 15
 
 [SpaceshipConfig]
 PositionX = 600.0
