--- a/Source/Asteroids/Asteroids.vcxproj
+++ b/Source/Asteroids/Asteroids.vcxproj
@@ -82,7 +82,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>PlayFabSdk2015.lib;cpprest140_2_9.lib;sfml-window.lib;sfml-system.lib;sfml-graphics.lib;sfml-audio.lib;sfml-network.lib;Events.lib;Achievements.lib;DebugCommandManager.lib;DebugConsole.lib;Animation.lib;Resources.lib;Input.lib;Physics.lib;Spaceship.lib;Utility.lib;AsteroidsLogicAndSpace.lib;Particle.lib;UI.lib;Leaderboard.lib;cpprest140_2_9.lib;PlayFabSdk2015.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib;$(SolutionDir)Bin;$(SolutionDir)TEMP;</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)SFML\lib;$(SolutionDir)Bin;$(SolutionDir)TEMP;$(SolutionDir)PlayFab\lib</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>xcopy "$(SolutionDir)SFML\bin\openal32.dll" "$(OutDir)\*.*" /F /R /Y /I
