--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -10,6 +10,7 @@ achievementSound = Resources\audio\achievement.wav
 [PictureResource]
 asteroid =  Resources\graphics\aster.bmp
 smallasteroid =  Resources\graphics\smallasteroid.png
+achievements = Resources\graphics\achivka.png
 
 [TextureResource]
 bullet = Resources\graphics\bullet.png
@@ -18,6 +19,9 @@ asteroidTexture = Resources\graphics\asteroid.png
 resetButton = Resources\graphics\resetButton.png
 exitButton = Resources\graphics\exitButton.png
 pauseButton = Resources\graphics\pauseButton.png
+health = Resources\graphics\Health.png
+bullets = Resources\graphics\bullets.png
+rockets = Resources\graphics\rockets.png
 
 [ImageSequenceResource]
 girl =  Resources\graphics\girl.png
@@ -183,11 +187,10 @@ AnimationTime =  8000
 2 = 71, 0
 3 = 72, 3
 4 = 36
-5 = 58
-6 = 57
-7 = 39
-8 = 54
-9 = 15
+5 = 57
+6 = 39
+7 = 54
+8 = 15
 
 [SpaceshipConfig]
 PositionX = 600.0
