add pause indicator

--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -18,7 +18,8 @@ rocket = Resources\graphics\rocket.png
 asteroidTexture = Resources\graphics\asteroid.png
 resetButton = Resources\graphics\resetButton.png
 exitButton = Resources\graphics\exitButton.png
-pauseButton = Resources\graphics\pauseButton.png
+startButton = Resources\graphics\startButton.png
+pause = Resources\graphics\pause.png
 health = Resources\graphics\Health.png
 bullets = Resources\graphics\bullets.png
 rockets = Resources\graphics\rockets.png
