--- a/Source/Asteroids/GameConfig.INI
+++ b/Source/Asteroids/GameConfig.INI
@@ -19,6 +19,7 @@ asteroidTexture = Resources\graphics\asteroid.png
 resetButton = Resources\graphics\resetButton.png
 exitButton = Resources\graphics\exitButton.png
 startButton = Resources\graphics\startButton.png
+scoreButton = Resources\graphics\scores.png
 pause = Resources\graphics\pause.png
 health = Resources\graphics\Health.png
 bullets = Resources\graphics\bullets.png
